--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <noscript>
-      You need to enable JavaScript to run this app.
+      You need to enable JavaScript to run this home.
     </noscript>
 
     <div class="inspiro-jumbotron jumbotron jumbotron-fluid">
@@ -28,31 +28,6 @@
         </p>
       </div>
     </div>
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#">Buy</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#">About</a>
-          </li>
-        </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-primary my-2 my-sm-0" type="submit">Search</button>
-        </form>
-      </div>
-    </nav>
-
-
 
     <div id="root"></div>
 
